# strbench

./: Cargo.toml
benches/: bench.rs  iai.rs
src/: lib.rs
