[package]
name = "strbench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bench]]
name = "bench"
harness = false

[[bench]]
name = "iai"
harness = false

[dependencies]
rand = "0.8.5"

[dev-dependencies]
criterion = "0.5.1"
iai = "0.1.1"
